# NEURABOT

./: .editorconfig  .env.example  .gitignore  .watchdog-daemon.sh  Dockerfile.sandbox  Dockerfile.sandbox-browser  FEATURES.md  FOR_LATER.md  README.md  STARTUP_IMPLEMENTATION.md  api-1.json  api-1.yaml  context_bundle.txt  docker-compose.yml  ecosystem.config.cjs  extract_contexts.sh  package.json  pnpm-lock.yaml  readme2.md
.agent/: CODE_WATCH.md  code-watch-baseline.md
docs/: CODE_AUDIT_REPORT.md  EVOLUTION_ACCELERATION_GUIDE.md  EVOLUTION_QUICK_REFERENCE.md  EXCELLENCE_ROADMAP_IMPLEMENTATION.md  OPENCLAW_INTEGRATION.md  SOWWY_ARCHITECTURE.md  SOWWY_MEMORY_RESEARCH.md  SOWWY_QUICKSTART.md  SOWWY_SECRETS_VAULT.md  SOWWY_SYSTEMD_HARDENING.md  SOWWY_VPS_SECURITY.md  SPEED_DEMON_GUIDE.md  bedrock.md  docs.json  index.md  ios-appstore-prep.md  log-analysis-before-after-restart.md  openclaws-system-configuration-report.md  scout-memory-design-report.md  scout-role-and-execution.md  self-modification-protocol.md
git-hooks/: pre-commit
neurabot-native/: Cargo.toml
neurabot-native/core-native/: Cargo.toml  build.rs  package.json
neurabot-native/core-native/src/: checklist.rs  lib.rs  media_parse.rs  mime.rs  priority.rs  secrets.rs
neurabot-native/watchdog/: Cargo.toml
neurabot-native/watchdog/src/: main.rs
scripts/: check-self-modify-boundaries.sh  concat-codebase.ts  deploy-poweruser.sh  enable-persistence.sh  generate-secure-token.ts  ios-archive-for-testflight.sh  monitor-neurabot.sh  pm2-sentinel.cjs  rename-codebase.sh  run-node.mjs  setup-postgres.sh  (+4 more)
(+242 files in other folders)
